# rhythmgen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
src/rhythmgen/: __init__.py  blind.py  control.py  generator.py  grid.py  listener.py  render.py  syncopation.py
tests/: test_m1.py  test_m2.py  test_m3.py  test_m4.py
