[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmgen"
version = "0.1.0"
description = "Generazione di ritmi con ascoltatore interno (Dynamic Attending Theory)"
requires-python = ">=3.12"  # statistics.correlation(method="ranked") nei test

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
